# adventofcode-2023

./: .gitignore  README.md  adventofcode2023.cabal
src/: Aoc.hs
src/Aoc/: Day01.hs  Day02.hs
test/Aoc/: Day01Spec.hs  Day02Spec.hs
