cabal-version:      3.0
name:               adventofcode2023
version:            0.1.0.0
license:            NONE
author:             David Tchepak
maintainer:         dave@davesquared.net
build-type:         Simple
extra-doc-files:    CHANGELOG.md
                    README.md
tested-with:        GHC == 9.4.7

common common-options
    ghc-options:
        -Wall
    build-depends:    base ^>=4.17.0.0
    default-language: GHC2021
    other-extensions: OverloadedStrings

library
    import:           common-options
    exposed-modules:
        Aoc
        , Aoc.Day01
    build-depends:    megaparsec ^>=9.3,
                      text ^>=2.0.1,
                      mtl ^>=2.3.1,
                      containers ^>=0.6.6
    hs-source-dirs:   src

test-suite adventofcode2023-test
    import:           common-options
    other-modules:
        Aoc.Day01Spec
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-depends:
        hspec ^>=2.10.6,
        QuickCheck ^>=2.14.2,
        raw-strings-qq ^>=1.1,
        text,
        containers,
        adventofcode2023
    build-tool-depends:  hspec-discover:hspec-discover == 2.*
    ghc-options:
        -threaded
        -rtsopts
        -with-rtsopts=-N
